// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders UI 1`] = `
<div>
  <div
    class="chart-builder-wrapper"
  >
    <form
      class="bg-white bg-white text-xs p-3 text-left chart-builder"
    >
      <div
        class="flex flex-wrap "
      >
        <div
          class="w-full mb-3"
        >
          <label
            class="text-xs font-bold uppercase text-gray-700"
            for="chartType"
          >
            Chart type
          </label>
          <div
            class="relative"
          >
            <select
              class="block appearance-none w-full mt-1 bg-gray-200 border border-gray-200 text-gray-700 py-2 px-2 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
              name="chartType"
              placeholder="Chart type"
              required=""
            >
              <option
                value="line"
              >
                line
              </option>
              <option
                value="bar"
              >
                bar
              </option>
            </select>
            <div
              class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
            >
              <svg
                class="fill-current h-4 w-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="w-full mb-3"
        >
          <label
            class="text-xs font-bold uppercase text-gray-700"
            for="xAxis"
          >
            Group column
          </label>
          <div
            class="relative"
          >
            <select
              class="block appearance-none w-full mt-1 bg-gray-200 border border-gray-200 text-gray-700 py-2 px-2 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
              name="xAxis"
              placeholder="Field for X axis"
              required=""
            >
              <option
                value="a"
              >
                a
              </option>
              <option
                value="b"
              >
                b
              </option>
              <option
                value="c"
              >
                c
              </option>
            </select>
            <div
              class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
            >
              <svg
                class="fill-current h-4 w-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="w-full mb-3"
        >
          <label
            class="text-xs font-bold uppercase text-gray-700"
            for="yAxis"
          >
            Series
          </label>
          <label
            class="block text-gray-500 font-bold "
          >
            <input
              checked=""
              class="mr-2 leading-tight"
              name="yAxis"
              type="checkbox"
              value="a"
            />
            <span
              class="text-xs"
            >
              a
            </span>
          </label>
          <label
            class="block text-gray-500 font-bold "
          >
            <input
              class="mr-2 leading-tight"
              name="yAxis"
              type="checkbox"
              value="b"
            />
            <span
              class="text-xs"
            >
              b
            </span>
          </label>
          <label
            class="block text-gray-500 font-bold "
          >
            <input
              class="mr-2 leading-tight"
              name="yAxis"
              type="checkbox"
              value="c"
            />
            <span
              class="text-xs"
            >
              c
            </span>
          </label>
        </div>
      </div>
      <div
        class="w-full mt-2 mb-3"
      >
        <div
          class="flex justify-center"
        >
          <button
            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
            type="submit"
          >
            Add view
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`shows error message for non-compiled view 1`] = `
<div>
  <div>
    ChartBuilder requires resource to be compiled into view.
  </div>
</div>
`;

exports[`shows error message if no schema 1`] = `
<div>
  <div>
    ChartBuilder requires resource schema.
  </div>
</div>
`;
